13 February 2009: Wouter
	- forwarder information now per-thread duplicated.
	  This keeps it read only for speed, with no locking necessary.
	- forward command for unbound control to change forwarders to use
	  on the fly.
	- document that unbound-host reads no config file by default.
	- updated iana portlist.

12 February 2009: Wouter
	- call setusercontext if available (on BSD).
	- small refactor of stats clearing.
	- #227: flush_stats feature for unbound-control.
	- stats_noreset feature for unbound-control.
	- flush_requestlist feature for unbound-control.
	- libunbound version upped API (was changed 5 feb).
	- unbound-control status shows if root forwarding is in use.
	- slightly nicer memory management in iter-fwd code.

10 February 2009: Wouter
	- keys with rfc5011 REVOKE flag are skipped and not considered when
	  validating data.
	- iana portlist updated
	- #226: dump_requestlist feature for unbound-control.

6 February 2009: Wouter
	- contrib contains specfile for fedora 1.2.1 (from Paul Wouters).
	- iana portlist updated.
	- fixup EOL in include directive (reported by Paul Wouters).
	  You can no longer specify newlines in the names of included files.
	- config parser changed. Gives some syntax errors closer to where they 
	  occurred. Does not enforce a space after keyword anymore.
	  Does not allow literal newlines inside quoted strings anymore.
	- verbosity level 5 logs customer IP for new requestlist entries.
	- test fix, lexer and cancel test.
	- new option log-time-ascii: yes  if you enable it prints timestamps
	  in the log file as Feb 06 13:45:26 (like syslog does).
	- detect event_base_new in libevent-1.4.1 and later and use it.
	- #231 unbound-checkconf -o option prints that value from config file.
	  Useful for scripting in management scripts and the like.

5 February 2009: Wouter
	- ldns 1.5.0 rc as tarball included.
	- 1.3.0 development continues:
	  change in libunbound API: ub_cancel can return an error, that